Purple Master, Purple Limit, Yellow Limit
Some purple/pink TRON models are in but buggy

--- a/modellist.yml
+++ b/modellist.yml
@@ -129,6 +129,11 @@ Party:
     - FrederykStrife/P_EX100_TRIF
     - FrederykStrife/P_EX100_ULTF
     - FrederykStrife/P_EX100_HTLF
+    - FrederykStrife/Purple/Purple Master
+    #- FrederykStrife/Purple/Purple Master TR
+    - FrederykStrife/Purple/Purple Limit
+    - FrederykStrife/Purple/Yellow Limit
+    #- FrederykStrife/Purple/Pink Master TR
     - FrederykStrife/Purple/Purple Drip
     - FrederykStrife/Purple/Trinity
   Lion Sora:
