Struggle bats world variants

--- a/modellist.yml
+++ b/modellist.yml
@@ -336,6 +336,12 @@ Weapon:
     - All-in-One/W_EX010_00
     - All-in-One/W_EX010_00_NM
     - All-in-One/W_EX010_00_TR
+    - All-in-One/W_EX010_U0_NM
+    - All-in-One/W_EX010_U0_TR
+    - All-in-One/W_EX010_V0_NM
+    - All-in-One/W_EX010_V0_TR
+    - All-in-One/W_EX010_W0_NM
+    - All-in-One/W_EX010_W0_TR
     - All-in-One/W_EX010_X0
     - All-in-One/W_EX010_X0_NM
     - All-in-One/W_EX010_X0_TR
