Zurph's KH1 Sora

--- a/modellist.yml
+++ b/modellist.yml
@@ -122,6 +122,20 @@ Party:
     - Dee-Ayy/P_EX100_TRIF
     - Dee-Ayy/P_EX100_ULTF
     - Dee-Ayy/P_EX100_HTLF
+    - Zurph/P_EX100
+    - Zurph/P_EX100_BTLF
+    - Zurph/P_EX100_MAGF
+    - Zurph/P_EX100_KH1F
+    - Zurph/P_EX100_TRIF
+    - Zurph/P_EX100_ULTF
+    - Zurph/P_EX100_HTLF
+    - Zurph/P_EX100_NM
+    - Zurph/P_EX100_NM_BTLF
+    - Zurph/P_EX100_NM_MAGF
+    - Zurph/P_EX100_NM_KH1F
+    - Zurph/P_EX100_NM_TRIF
+    - Zurph/P_EX100_NM_ULTF
+    - Zurph/P_EX100_NM_HTLF
     - FrederykStrife/P_EX100
     - FrederykStrife/P_EX100_BTLF
     - FrederykStrife/P_EX100_MAGF
