--- a/modellist.yml
+++ b/modellist.yml
@@ -122,20 +122,20 @@ Party:
     - Dee-Ayy/P_EX100_TRIF
     - Dee-Ayy/P_EX100_ULTF
     - Dee-Ayy/P_EX100_HTLF
-    - Zurph/P_EX100
-    - Zurph/P_EX100_BTLF
-    - Zurph/P_EX100_MAGF
-    - Zurph/P_EX100_KH1F
-    - Zurph/P_EX100_TRIF
-    - Zurph/P_EX100_ULTF
-    - Zurph/P_EX100_HTLF
-    - Zurph/P_EX100_NM
-    - Zurph/P_EX100_NM_BTLF
-    - Zurph/P_EX100_NM_MAGF
-    - Zurph/P_EX100_NM_KH1F
-    - Zurph/P_EX100_NM_TRIF
-    - Zurph/P_EX100_NM_ULTF
-    - Zurph/P_EX100_NM_HTLF
+    - Zurph/KH1 Sora/P_EX100
+    - Zurph/KH1 Sora/P_EX100_BTLF
+    - Zurph/KH1 Sora/P_EX100_MAGF
+    - Zurph/KH1 Sora/P_EX100_KH1F
+    - Zurph/KH1 Sora/P_EX100_TRIF
+    - Zurph/KH1 Sora/P_EX100_ULTF
+    - Zurph/KH1 Sora/P_EX100_HTLF
+    - Zurph/KH1 Sora/P_EX100_NM
+    - Zurph/KH1 Sora/P_EX100_NM_BTLF
+    - Zurph/KH1 Sora/P_EX100_NM_MAGF
+    - Zurph/KH1 Sora/P_EX100_NM_KH1F
+    - Zurph/KH1 Sora/P_EX100_NM_TRIF
+    - Zurph/KH1 Sora/P_EX100_NM_ULTF
+    - Zurph/KH1 Sora/P_EX100_NM_HTLF
     - FrederykStrife/P_EX100
     - FrederykStrife/P_EX100_BTLF
     - FrederykStrife/P_EX100_MAGF
